fix(layout) Align App title on the left

--- a/uid-pages/layout-bonita/src/assets/css/layout.css
+++ b/uid-pages/layout-bonita/src/assets/css/layout.css
@@ -101,6 +101,7 @@ body > div.container-fluid > div.row:nth-child(2) iframe {
     overflow: hidden;
     white-space: nowrap;
     width: 100%;
+    text-align: left;
 }
 
 .app-name-title a:hover {
